Update release.sh