@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+
 set -e
 
 if (( $# == 0 || $# > 2 ))
@@ -19,11 +21,12 @@ fi
 if (( $# > 0 ))
 	then
 		echo "===== Releasing: $1 ====="
-		mvn versions:set -DgenerateBackupPoms=false -DprocessAllModules=true -DnewVersion=$1
-		mvn versions:update-property -DgenerateBackupPoms=false -Dproperty=version.winter
-		git -commit -a -m "Release $1"
+		mvn -o versions:update-parent -DgenerateBackupPoms=false
+		mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$1
+		git commit -a -m "Release $1"
 		git tag -a $1 -m "Release $1"
-		mvn clean deploy -Pio.winterframework.release
+		mvn clean package
+		mvn -pl '!winter-test,!winter-core-test' clean deploy -Pio.winterframework.release
 fi
 
 if (( $# == 2 ))
@@ -33,9 +36,9 @@ if (( $# == 2 ))
 				echo "bad version"
 		fi
 		echo "===== New Snapshot: $2 ====="
-		mvn versions:set -DgenerateBackupPoms=false -DprocessAllModules=true -DnewVersion=$2
-		mvn versions:update-property -DgenerateBackupPoms=false -Dproperty=version.winter
-		git -commit -a -m "$2"
+		mvn -o versions:update-parent -DgenerateBackupPoms=false -DallowSnapshots=true
+		mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$2
+		git commit -a -m "$2"
 fi
 
 exit 0
